major restyling, canvas needs to be fixed on mobile

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,18 +1,19 @@
-$banner: #013266;
-$darkest: #013266;
-
-$midtone: #0098fe;
-$brightAccent: #0098fe;
-
-$card1: #FFA1E0;
-$card2: #da88d3;
-$card3: #A772B9;
-
 $medFontHeading: 2rem;
 $medFontPara: 1.5rem;
-$cardPadding: .3125rem;
-$border: .125rem;
-$largePadding: 1.25rem; 
+$cardPadding: 0.625rem;
+$border: 0.125rem;
+$largePadding: 1.25rem;
+$xLargeSpacing: 2.1875rem;
+$cardRadius: 0.4375rem;
+$blurOffset: -0.4375rem;
+$blurSize: 0.0625rem;
+$borderWidth: 0.1875rem;
+
+$blue: #53c1ff;
+$pink: #ff3399;
+$transparent-pink: rgba(red($pink), green($pink), blue($pink), 0.09);
+$transparent-blue: rgba(red($blue), green($blue), blue($blue), 0.12);
+$background: #040f1c;
 
 //-------------------------------------------------------------------------
 // Styling Cross-Browser Compatible Range Inputs with Sass
@@ -21,25 +22,25 @@ $largePadding: 1.25rem;
 // Version 1.5.2
 // MIT License
 
-$track-color: #eceff1 !default;
-$thumb-color: $midtone !default;
+$track-color: $pink !default;
+$thumb-color: $blue !default;
 
 $thumb-radius: $medFontHeading !default;
-$thumb-height: $medFontHeading!default;
+$thumb-height: $medFontHeading !default;
 $thumb-width: $medFontHeading !default;
-$thumb-shadow-size: .25rem !default;
-$thumb-shadow-blur: .25rem !default;
-$thumb-shadow-color: rgba(0, 0, 0, .2) !default;
-$thumb-border-width: /* var(--border) */ .125rem !default;
-$thumb-border-color: #eceff1 !default;
+$thumb-shadow-size: 0.25rem !default;
+$thumb-shadow-blur: 0.25rem !default;
+$thumb-shadow-color: rgba(0, 0, 0, 0.2) !default;
+$thumb-border-width: /* var(--border) */ 0.125rem !default;
+$thumb-border-color: $background !default;
 
 $track-width: 100% !default;
 $track-height: 1rem !default;
-$track-shadow-size: .0625rem !default;
-$track-shadow-blur: .0625rem !default;
-$track-shadow-color: rgba(0, 0, 0, .2) !default;
-$track-border-width: .125rem !default;
-$track-border-color: #cfd8dc !default;
+$track-shadow-size: 0.0625rem !default;
+$track-shadow-blur: 0.0625rem !default;
+$track-shadow-color: rgba(0, 0, 0, 0.2) !default;
+$track-border-width: 0.125rem !default;
+$track-border-color: $background !default;
 
 $track-radius: 1.25rem !default;
 $contrast: 5% !default;
